@@ -1,5 +1,7 @@
 Changes for 1.1.6:
 
+ - fixed permission system (Eugene)
+ - fixed SQLs for PostgreSQL (Eugene)
  - fix for adding trigger expressions having sign '-' (Alexei)
  - fix for adding hosts names having character '-' (Alexei)
 
